--- a/views/navigationhome.html
+++ b/views/navigationhome.html
@@ -14,7 +14,7 @@
 </li-->
 
                 <li ng-mouseover="showsub(0)" ng-mouseleave="hidesub(0)" style="position:relative;">
-                    <a ng-click="template.gourl('/subjewellery')">Jewellery</a>
+                    <a ng-click="template.gourl('/jewellery')">Jewellery</a>
                     <div class="megamenu megamenu2" ng-include src="submenuval[0]" ng-show="submenu[0]">
                     </div>
                 </li>
