--- a/views/navigationhome.html
+++ b/views/navigationhome.html
@@ -4,7 +4,7 @@
             <ul class="nav nav-pills font mainmenu" ng-class="ishome">
 
                 <li>
-                    <a ng-click="template.gourl('/category/just in');">Just In</a>
+                    <a ng-click="template.gourl('/category/just in');">Just-In</a>
 
                 </li>
                 <!--li ng-mouseover="showsub(5)" ng-mouseleave="hidesub(5)" style="position:relative;">
