--- a/views/accessoriessubmenu.html
+++ b/views/accessoriessubmenu.html
@@ -14,7 +14,7 @@
                     <a ng-click="template.gourl('/category/hair');">Hair</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/phone cases');">Phone Cases</a>
+                    <a ng-click="template.gourl('/category/phone-cases');">Phone Cases</a>
                 </li>
             </ul>
         </div>
