--- a/views/lookbook.html
+++ b/views/lookbook.html
@@ -28,6 +28,8 @@
             <div class="proprice">
                         <h5>{{activelookbook.price|convertprice}}</h5>
                         <hr style="width:100%;">
+      
+                        <p>{{activelookbook.description}}</p>
                     </div>
             <a class="btn btn-primary btn-black no-margin" ng-click="addtocart(activelookbook.id,activelookbook.name,activelookbook.price,1)">Add to Cart</a>
             <br>
