--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -380,6 +380,7 @@ ul.submenudown li {
     padding: 0 10px;
     z-index: 1;
     width: 400px;
+    bottom: 95px;
 }
 .lookbookimg {
     padding: 10px;
