--- a/views/login.html
+++ b/views/login.html
@@ -47,9 +47,12 @@
                     </p>
                     <p><span><a href="">Forgot password ?</a></span><a class="btn btn-primary pull-right normal-login" ng-click="userlogin(login)" href="">Login</a>
                     
-                    <a class="btn btn-primary pull-right fb-login" href="http://wohlig.co.in/social/index.php/hauth/login?provider=Facebook&clientid=3"><i class="fa fa-facebook"></i>Facebook</a>
-                                <a class="btn btn-primary pull-right g-login" href="http://wohlig.co.in/social/index.php/hauth/login?provider=Google&clientid=3"><i class="fa fa-google-plus"></i>Google+</a>
+                    
                     </p>
+                    <div class="log-set text-center">
+                    <a class="btn btn-primary text-center fb-login" href="http://wohlig.co.in/social/index.php/hauth/login?provider=Facebook&clientid=3"><i class="fa fa-facebook"></i>Facebook</a>
+                                <a class="btn btn-primary text-center g-login" href="http://wohlig.co.in/social/index.php/hauth/login?provider=Google&clientid=3"><i class="fa fa-google-plus"></i>Google+</a>
+                    </div>
                 </div>
             </div>
 
