--- a/views/navigation.html
+++ b/views/navigation.html
@@ -21,7 +21,7 @@
                 </div>
             </li>
             <li ng-mouseover="showsub(1)" ng-mouseleave="hidesub(1)" style="position:relative;">
-                <a  ng-click="template.gourl('/category/accesories');">Accesories</a>
+                <a  ng-click="template.gourl('/category/accessories');">Accessories</a>
                 <div class="megamenu megamenu2" ng-include src="submenuval[1]" ng-show="submenu[1]">
                 </div>
             </li>
