--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -17,5 +17,43 @@
 
         </div>
     </div>
+<!-- Google Code for Sales Conversion Page -->
 
+<script type="text/javascript">
+
+/* <![CDATA[ */
+
+var google_conversion_id = 906029471;
+
+var google_conversion_language = "en";
+
+var google_conversion_format = "3";
+
+var google_conversion_color = "ffffff";
+
+var google_conversion_label = "eKvkCPHt2lsQn9ODsAM";
+
+var google_remarketing_only = false;
+
+/* ]]> */
+
+</script>
+
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+
+</script>
+
+<noscript>
+
+<div style="display:inline;">
+
+<img height="1" width="1" style="border-style:none;" alt="" 
+
+src="//www.googleadservices.com/pagead/conversion/906029471/?label=eKvkCPHt2lsQn9ODsAM&am
+
+p;guid=ON&amp;script=0"/>
+
+</div>
+
+</noscript>
 </div>
