--- a/views/accessoriessubmenu.html
+++ b/views/accessoriessubmenu.html
@@ -16,6 +16,9 @@
                 <li>
                     <a ng-click="template.gourl('/category/phone-cases');">Phone Cases</a>
                 </li>
+                   <li>
+                    <a ng-click="template.gourl('/category/metallic-tattoos');">Metallic Tattoos</a>
+                </li>
             </ul>
         </div>
 
