--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -128,6 +128,7 @@ input:focus {
     margin-bottom: 10px;
 }
 .iosicon {
+    -webkit-filter: grayscale(1);
     filter: grayscale(1);
     opacity: 0.7;
     transition: all 1s;
@@ -136,15 +137,17 @@ input:focus {
     -moz-transition: all 1s;
 }
 .androidicon {
+    -webkit-filter: grayscale(1);
     filter: grayscale(1);
     opacity: 0.4;
     transition: all 1s;
-      -webkit-transition: all 1s;
+    -webkit-transition: all 1s;
     -o-transition: all 1s;
     -moz-transition: all 1s;
 }
 .iosicon:hover,
 .androidicon:hover {
+    -webkit-filter: grayscale(0);
     filter: grayscale(0);
     opacity: 1;
 }
@@ -157,6 +160,7 @@ input:focus {
     -moz-transition: all 0.5s;
 }
 .socialicons:hover {
+    -webkit-filter: grayscale(0);
     filter: grayscale(0);
     opacity: 1;
     zoom: 1.1;
@@ -195,6 +199,9 @@ input:focus {
     -webkit-transition: all 1.3s;
     -moz-transition: all 1.3s;
     -o-transition: all 1.3s;
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
 }
@@ -267,6 +274,8 @@ input:focus {
     margin-bottom: 10px;
 }
 .zoomLens {
+    -webkit-box-shadow: rgb(206, 206, 206) 1px 0px 5px 2px;
+    -moz-box-shadow: rgb(206, 206, 206) 1px 0px 5px 2px;
     box-shadow: rgb(206, 206, 206) 1px 0px 5px 2px;
     border: 0px !important;
 }
@@ -294,6 +303,8 @@ input:focus {
     color: #a8a8a8;
 }
 .billing .panel-group .panel {
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
     border-radius: 0px;
     border-color: transparent;
 }
@@ -373,7 +384,13 @@ ul.submenudown li {
     margin: 0;
     background-color: #FFABD3;
     margin-left: 9px;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
     transform: rotate(45deg);
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
     border-radius: 0px;
 }
 .carousel-indicators li {
@@ -382,13 +399,21 @@ ul.submenudown li {
     margin: 0;
     background-color: rgba(255, 255, 255, 0.6);
     margin-left: 9px;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
     transform: rotate(45deg);
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
     border-radius: 0px;
 }
 .productdetails {
     position: fixed;
     right: 10px;
     background: rgba(253, 253, 253, 0.8);
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
     border-radius: 2px;
     padding: 0 10px;
     z-index: 1;
@@ -484,14 +509,16 @@ button.home-btn:focus {
     padding: 10px 20px;
     background: #fcfcfc;
     opacity: 0;
+    -moz-transition: all 700ms;
     transition: all 700ms;
     -webkit-transition: all 700ms;
     -o-transition: all 700ms;
 }
 .maincontent:hover .lookdetails {
     opacity: 1;
+    -moz-transition: all 700ms;
     transition: all 700ms;
-     -webkit-transition: all 700ms;
+    -webkit-transition: all 700ms;
     -o-transition: all 700ms;
 }
 h5.pricecolor {
@@ -516,8 +543,9 @@ h5.pricecolor {
     width: 250px;
     border-top: 20px solid #ccc;
     float: left;
+    -moz-transition: all 700ms;
     transition: all 700ms;
-     -webkit-transition: all 700ms;
+    -webkit-transition: all 700ms;
     -o-transition: all 700ms;
     opacity: .5;
 }
@@ -528,8 +556,9 @@ h5.pricecolor {
 }
 .hori-item.active {
     border-color: #AAA;
+    -moz-transition: all 700ms;
     transition: all 700ms;
-     -webkit-transition: all 700ms;
+    -webkit-transition: all 700ms;
     -o-transition: all 700ms;
     background: white;
     opacity: 1;
@@ -562,6 +591,7 @@ h5.pricecolor {
     overflow: hidden;
     height: 300px;
     margin: 0 auto;
+    background: white;
 }
 .megamenu img {
     width: 75%;
@@ -590,6 +620,9 @@ h5.pricecolor {
 }
 .bgimg {
     background: url('../../img/banner.jpg');
+    -webkit-background-size: 100% 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
     background-size: 100%;
     height: 578px;
     background-repeat: no-repeat;
@@ -784,6 +817,8 @@ div.megamenu.megamenu2 {
     bottom: 10px;
     right: 10px;
     outline: 0px;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
     border-radius: 100%;
     font-size: 18px;
     padding: 15px;
@@ -810,6 +845,8 @@ div.megamenu.megamenu2 {
 }
 .carticon {
     font-size: 25px;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
     border-radius: 100%;
     width: 25px;
     height: 25px;
@@ -858,6 +895,8 @@ span.cartspace {
 .discountcoupon {
     border-color: #03e1e4;
     outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px #03e1e4;
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px #03e1e4;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px #03e1e4;
 }
 .glyphicon {
@@ -877,6 +916,8 @@ span.cartspace {
     margin-bottom: 20px;
     list-style: none;
     color: #A8A8A8;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
     border-radius: 0;
     line-height: 28px;
     zoom: 0.9;
@@ -917,9 +958,14 @@ a.btns-primary {
     white-space: nowrap;
     vertical-align: middle;
     cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
     background-image: none;
     border: none;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
     border-radius: 0;
 }
 button.btnss-primary {
@@ -975,6 +1021,9 @@ button.btnss-primary {
     width: 270px;
     height: 170px;
     border: solid 1px black;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
@@ -993,17 +1042,18 @@ button.btnss-primary {
 }
 .cart-set {
     position: absolute;
-  right: 0px;
-  bottom: 0px;
-  font-size: 16px;
-  background: rgba(216, 242, 239, 1);
-  
+    right: 0px;
+    bottom: 0px;
+    font-size: 16px;
+    background: rgba(216, 242, 239, 1);
     padding: 9px 10px 9px 10px;
-  border-radius: 0px;
-  z-index: 999999;
-  float: right;
-  /* width: 600px; */
-/*      width: 600px;*/
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+    z-index: 999999;
+    float: right;
+    /* width: 600px; */
+    /*      width: 600px;*/
 }
 .cart-set img {
     height: 39px;
@@ -1016,25 +1066,24 @@ button.btnss-primary {
 }*/
 
 .det-cart {
-  position: fixed;
-  z-index: 99999999999;
-  right: 0px;
-  bottom: 5px;
-  width: 900px;
+    position: fixed;
+    z-index: 99999999999;
+    right: 0px;
+    bottom: 5px;
+    width: 900px;
 }
 .cart-det {
-  position: absolute;
-  float: right;
-  /* z-index: 99999999; */
-  right:-580px;
-  background: rgb(216, 242, 239);
-  padding: 8.5px;
-  bottom: 0px;
+    position: absolute;
+    float: right;
+    /* z-index: 99999999; */
+    right: -580px;
+    background: rgb(216, 242, 239);
+    padding: 8.5px;
+    bottom: 0px;
     transition: all ease 1s;
     -webkit-transition: all ease 1s;
     -moz-transition: all ease 1s;
     -o-transition: all ease 1s;
-
 }
 .step-set ul li {} .step-set {
     /* text-align: center; */
@@ -1056,6 +1105,8 @@ button.btnss-primary {
     background: rgb(39, 240, 232);
     color: #fff;
     border-right: 1px solid #03E1E4;
+    -webkit-box-shadow: 0 1px 2px #6ECCC8 !important;
+    -moz-box-shadow: 0 1px 2px #6ECCC8 !important;
     box-shadow: 0 1px 2px #6ECCC8 !important;
     position: relative;
 }
@@ -1073,6 +1124,10 @@ button.btnss-primary {
     z-index: 1;
     bottom: -11px;
     left: 50%;
+    -webkit-transform: translatex(-50%);
+    -moz-transform: translatex(-50%);
+    -ms-transform: translatex(-50%);
+    -o-transform: translatex(-50%);
     transform: translatex(-50%);
 }
 .pop-set {
@@ -1083,7 +1138,13 @@ button.btnss-primary {
     margin: 0 auto;
     position: relative;
     top: 50%;
+    -webkit-transform: translateY(50%);
+    -moz-transform: translateY(50%);
+    -ms-transform: translateY(50%);
+    -o-transform: translateY(50%);
     transform: translateY(50%);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
     border-radius: 5px;
     text-align: center;
 }
@@ -1162,20 +1223,21 @@ span.currencysym {
 span.currencytobe {
     padding: 0;
 }
-#c9-button.c9-image.c9-bottom-left, #c9-button.c9-image.c9-bottom-right {
-  bottom: 0;
-  display: none;
+#c9-button.c9-image.c9-bottom-left,
+#c9-button.c9-image.c9-bottom-right {
+    bottom: 0;
+    display: none;
 }
-
-.cart-det td, th {
-  padding: 2px 15px 2px 11px;
-  border: 1px solid rgb(0, 227, 227);
-  text-align: center;
-  font-size: 15px;
-  color: #000;
+.cart-det td,
+th {
+    padding: 2px 15px 2px 11px;
+    border: 1px solid rgb(0, 227, 227);
+    text-align: center;
+    font-size: 15px;
+    color: #000;
 }
-.det-cart:hover .cart-det{
-     right: 126px; 
+.det-cart:hover .cart-det {
+    right: 126px;
 }
 .free-set {
     border: 1px solid #27F0E8;
@@ -1183,6 +1245,8 @@ span.currencytobe {
     text-align: center;
     padding: 2px 0px 3px 0px;
     margin: 0;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
     border-radius: 8px;
     background: rgb(255, 255, 255);
 }
@@ -1192,56 +1256,56 @@ span.currencytobe {
     text-align: center;
     padding: 0;
     margin: 0;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
     border-radius: 8px;
 }
-
 .free-set p {
-     margin: 0;
-  padding: 0;
-  
-     line-height: 15px;
-  color: #696969;
-  
-     font-size: 12px;
-  font-weight: normal;
+    margin: 0;
+    padding: 0;
+    line-height: 15px;
+    color: #696969;
+    font-size: 12px;
+    font-weight: normal;
 }
-
 .free-set span {
     color: #27F0E8;
     font-weight: 500;
     font-size: 20px;
 }
 .symbol {
-  width: 28%;
-  padding: 20px 13px;
-  border-radius: 4px 0px 0px 4px;
-  background: #27f0e8;
-  display:inline-block;  
+    width: 28%;
+    padding: 20px 13px;
+    -webkit-border-radius: 4px 0px 0px 4px;
+    -moz-border-radius: 4px 0px 0px 4px;
+    border-radius: 4px 0px 0px 4px;
+    background: #27f0e8;
+    display: inline-block;
     display: -moz-inline-stack;
-        display: -webkit-inline-box;
-      
-/*        *display: inline;*/
-  text-align: center;
+    display: -webkit-inline-box;
+    /*        *display: inline;*/
+    text-align: center;
 }
 .value {
-  width: 70%;
-  padding-top: 9px;
-  float: right;
-/*  display:inline-block;*/
-  text-align: center;
+    width: 70%;
+    padding-top: 9px;
+    float: right;
+    /*  display:inline-block;*/
+    text-align: center;
 }
 .value h1 {
-  padding: 0px;
-  margin: 0;
-  font-size: 20px;
-  font-weight: 500;
-  color: rgb(39, 240, 232);
+    padding: 0px;
+    margin: 0;
+    font-size: 20px;
+    font-weight: 500;
+    color: rgb(39, 240, 232);
 }
-.value p{
-  line-height: 25px;
-  font-size: 12px;
+.value p {
+    line-height: 25px;
+    font-size: 12px;
 }
-
 .product .img {
-  height: 300px;
+    height: 300px;
+    max-width: 100%;
+    max-height: 100%;
 }
