--- a/views/lylaloves.html
+++ b/views/lylaloves.html
@@ -18,18 +18,23 @@
     </div>
     <div class="maincontent">
         <div class="row">
-            <div class="col-md-3">
+           <div class="col-md-1"></div>
+            <div class="col-md-2">
                 <a href="http://instagram.com/lyla_loves" target="_blank"><div class="socialbig">instagram</div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <a href="https://www.facebook.com/lylaloves" target="_blank"><div class="socialbig">facebook</div></a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                <a href="https://twitter.com/lyla_loves" target="_blank"><div class="socialbig">twitter</div></a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <a href="http://www.pinterest.com/lloves1548/" target="_blank"><div class="socialbig">pinterest</div></a>
             </div>
+            <div class="col-md-2">
+                <a href="https://lylalovesblog.wordpress.com/" target="_blank"><div class="socialbig">Blog</div></a>
+            </div>
+            <div class="col-md-1"></div>
         </div>
 
     </div>
