--- a/views/header.html
+++ b/views/header.html
@@ -94,7 +94,7 @@
                     <img src="img/pinterest.png" class="socialicons" title="Lyla Loves
 Pinterest " alt="LLoves1548 ">
                 </a>
-                <a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
+                <a href="https://lylalovesblog.wordpress.com" target="_blank">
                     <img src="img/tumbler.png" class="socialicons">
                 </a>
 <!--
