--- a/views/headerhome.html
+++ b/views/headerhome.html
@@ -93,7 +93,7 @@ i
                 <a href="http://www.pinterest.com/lloves1548/" target="_blank">
                     <img src="img/pinterest.png" title="Lyla Loves Pinterest" alt="LLoves1548" class="socialicons">
                 </a>
-                <a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
+                <a href="https://lylalovesblog.wordpress.com" target="_blank">
                     <img src="img/tumbler.png" title="Lyla Loves Blog" alt="LylaLovesBlog" class="socialicons">
                 </a>
 <!--
