--- a/views/lylaloves.html
+++ b/views/lylaloves.html
@@ -32,7 +32,7 @@
                 <a href="http://www.pinterest.com/lloves1548/" target="_blank"><div class="socialbig">pinterest</div></a>
             </div>
             <div class="col-md-2">
-                <a href="http://lylalovesblog.tumblr.com/" target="_blank"><div class="socialbig">Blog</div></a>
+                <a href="https://lylalovesblog.wordpress.com" target="_blank"><div class="socialbig">Blog</div></a>
             </div>
             <div class="col-md-1"></div>
         </div>
