--- a/views/header.html
+++ b/views/header.html
@@ -95,7 +95,7 @@
 Pinterest " alt="LLoves1548 ">
                 </a>
                 <a href="https://lylalovesblog.wordpress.com" target="_blank">
-                    <img src="img/tumbler.png" class="socialicons">
+                    <img src="img/blog.png" class="socialicons">
                 </a>
 <!--
 				<a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
