--- a/views/headerhome.html
+++ b/views/headerhome.html
@@ -94,7 +94,7 @@ i
                     <img src="img/pinterest.png" title="Lyla Loves Pinterest" alt="LLoves1548" class="socialicons">
                 </a>
                 <a href="https://lylalovesblog.wordpress.com" target="_blank">
-                    <img src="img/tumbler.png" title="Lyla Loves Blog" alt="LylaLovesBlog" class="socialicons">
+                    <img src="img/blog.png" title="Lyla Loves Blog" alt="LylaLovesBlog" class="socialicons">
                 </a>
 <!--
 				<a href="https://www.tumblr.com/blog/lylalovesblog" target="_blank">
