--- a/views/navigation.html
+++ b/views/navigation.html
@@ -6,7 +6,7 @@
         <ul class="nav nav-pills font mainmenu" ng-class="ishome" >
            
             <li>
-                <a ng-click="template.gourl('/just-in');">Just In</a>
+                <a ng-click="template.gourl('/justin');">Just In</a>
                 
             </li>
             <!--li ng-mouseover="showsub(5)" ng-mouseleave="hidesub(5)" style="position:relative;">
