--- a/views/navigation.html
+++ b/views/navigation.html
@@ -36,6 +36,10 @@
                 <a ng-click="template.gourl('/lylaloves');">lyla loves...</a>
                 
             </li>
+                    <li>
+                <a ng-click="template.gourl('/wholesale');">Wholesale</a>
+                
+            </li>
                 <li>
                     <a class="" ng-click="template.gourl('/lookbook');">lookbook</a>
 
