--- a/views/navigationhome.html
+++ b/views/navigationhome.html
@@ -33,6 +33,10 @@
                     <a class="" ng-click="template.gourl('/lylaloves');">lyla loves...</a>
 
                 </li>
+                    <li>
+                <a ng-click="template.gourl('/wholesale');">Wholesale</a>
+                
+            </li>
                  <li>
                     <a class="" ng-click="template.gourl('/lookbook');">lookbook</a>
 
