--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -672,10 +672,10 @@ img.butterfly-top {
     width: 100%;
 }
 .nav.mainmenu {
-    width: 710px;
+    width: 843px;
 }
 .nav.mainmenu.homeclass {
-    width: 710px;
+    width: 843px;
     visibility: visible;
 }
 li.homeclass {
@@ -1240,4 +1240,23 @@ th {
     height: 300px;
     max-width: 100%;
     max-height: 100%;
+}
+.wholesale-bn.text-center {
+    background: rgb(216, 242, 239);
+    padding: 10px 0px 4px;
+}
+
+.wholesale-bn.text-center h4 {
+    font-size: 44px;
+    font-family: "CheddarJack";
+}
+.wholesale-cnt h3 {
+    color: #96f3f3;
+    font-weight: 600;
+}
+.wholesale-cnt a {
+    color: #03e1e4;
+}
+.wholesale-cnt {
+    margin-bottom: 176px;
 }
