--- a/views/navigation.html
+++ b/views/navigation.html
@@ -25,6 +25,10 @@
                 <div class="megamenu megamenu2" ng-include src="submenuval[1]" ng-show="submenu[1]">
                 </div>
             </li>
+             <li>
+                <a ng-click="template.gourl('/sale');">sale</a>
+                
+            </li>
 <!--
             <li ng-mouseover="showsub(2)" ng-mouseleave="hidesub(2)">
                 <a href="#/lookbook">LOOKBOOK</a>
@@ -52,6 +56,10 @@
                 <div class="megamenu" ng-include src="submenuval[6]" ng-show="submenu[6]">
                 </div>
 -->
+            </li>
+            <li>
+                <a ng-click="template.gourl('/lylabox');">lyla box</a>
+                
             </li>
         </ul>
     </div>
