--- a/views/navigationhome.html
+++ b/views/navigationhome.html
@@ -24,6 +24,11 @@
                 <div class="megamenu megamenu2" ng-include src="submenuval[1]" ng-show="submenu[1]">
                 </div>
             </li>
+               
+                <li>
+                <a ng-click="template.gourl('/sale');">sale</a>
+                
+            </li>
                 <!--<li ng-mouseover="showsub(2)" ng-mouseleave="hidesub(2)">
 <a href="#/lookbook">LOOKBOOK</a>
 <div class="megamenu" ng-include src="submenuval[2]" ng-show="submenu[2]">
@@ -49,6 +54,10 @@
                     </div>
 -->
                 </li>
+                <li>
+                <a ng-click="template.gourl('/lylabox');">lyla box</a>
+                
+            </li>
             </ul>
     </div>
 
