--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -558,7 +558,7 @@ h5.pricecolor {
 }
 .product .img1,
 .product .img2 {
-    width: 300px;
+    width: 100%;
     overflow: hidden;
     height: 300px;
     margin: 0 auto;
@@ -1240,6 +1240,7 @@ th {
     height: 300px;
     max-width: 100%;
     max-height: 100%;
+    width: auto;
 }
 .wholesale-bn.text-center {
     background: rgb(216, 242, 239);
