--- a/views/lylabox.html
+++ b/views/lylabox.html
@@ -1,13 +1,20 @@
 <div class="content">
+<!--
     <div class="wholesale-bn text-center">
         <h4>lyla box</h4>
     </div>
+-->
     <div class="container">
         <div class="row">
-            <div class="wholesale-cnt">
-                <h3>Coming Soon...</h3>
-           
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div class="wholesale-cnt">
+                    <img src="../img/lylabox.jpg" class="img-responsive">
+
+                </div>
             </div>
+            <div class="col-md-4"></div>
+
         </div>
     </div>
 </div>
