--- a/views/profile.html
+++ b/views/profile.html
@@ -39,7 +39,7 @@
                                 </div>
                                 <div class="col-xs-4">
 
-                                    <input type="email" placeholder="Email" class="form-control" ng-model="personal.email" required> 
+                                    <input type="email" placeholder="Email" class="form-control" ng-model="personal.email" required>
                                 </div>
                             </div>
 
@@ -64,15 +64,15 @@
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="password" placeholder="New Password" class="form-control" required>
+                                    <input type="password" placeholder="New Password" class="form-control" ng-model="pwd.password" required>
                                 </div>
                                 <div class="col-xs-4">
 
-                                    <input type="password" placeholder="Re-enter Password" class="form-control" required>
+                                    <input type="password" placeholder="Re-enter Password" class="form-control" ng-model="pwd.confirmpassword" required>
                                 </div>
                             </div>
 
-                            <button href class="btn btn-default pull-right">Save</button>
+                            <button href class="btn btn-default pull-right" ng-click="changePassword(pwd);">Save</button>
                             <div class="clearfix"></div>
 
                         </div>
@@ -95,44 +95,44 @@
 
                             <div class="row">
                                 <div class="col-xs-8">
-                                    <textarea name="" id="" class="form-control" placeholder="Address"></textarea>
+                                    <textarea name="" id="" class="form-control" placeholder="Address" ng-model="billinfo.address"></textarea>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="text" placeholder="City" class="form-control" required>
+                                    <input type="text" placeholder="City" class="form-control" ng-model="billinfo.city" required>
 
                                 </div>
                                 <div class="col-xs-4">
 
-                                    <input type="text" placeholder="State/Province" class="form-control">
+                                    <input type="text" placeholder="State/Province" class="form-control" ng-model="billinfo.state">
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="text" placeholder="Zip/Postal Code" class="form-control" required>
+                                    <input type="text" placeholder="Zip/Postal Code" class="form-control" ng-model="billinfo.zip" required>
 
                                 </div>
                                 <div class="col-xs-4">
 
-                                    <input type="text" placeholder="Country" class="form-control" required>
+                                    <input type="text" placeholder="Country" class="form-control" ng-model="billinfo.country" required>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-4">
-                                    <input type="tel" placeholder="Telephone" class="form-control" required>
+                                    <input type="tel" placeholder="Telephone" class="form-control" ng-model="billinfo.telephone" required>
 
                                 </div>
                                 <div class="col-xs-4">
 
-                                    <input type="tel" placeholder="Fax" class="form-control">
+                                    <input type="tel" placeholder="Fax" class="form-control" ng-model="billinfo.fax">
                                 </div>
                             </div>
 
-                            <button href class="btn btn-default pull-right">Save</button>
+                            <button href class="btn btn-default pull-right" ng-click="changeBillingInfo(billinfo);">Save</button>
                             <div class="clearfix"></div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                     <div id="collapseTwo" class="panel-collapse collapse in">
                         <div class="panel-body billing-info">
 
-                            <table class="table table-hover">
+                            <table class="table table-hover" ng-if="cart.length>0">
                                 <thead>
                                     <tr>
                                         <th>Product Name</th>
@@ -159,20 +159,24 @@
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="singlecart in cart">
-                                        <td>{{singlecart.name}}</td>
+                                        <td>{{singlecart.productname}}</td>
 
                                         <td>{{singlecart.price|convertprice}}</td>
+                                        <td>{{singlecart.quantity}}</td>
+                                        <!--
                                         <td>
-                                            <input type="number" ng-model="newquantity[$index]" class="form-control cartinput">
+                                            <input type="number" ng-model="quantity[$index]" class="form-control cartinput">
                                         </td>
-                                        
+-->
+
 
                                     </tr>
 
                                 </tbody>
                             </table>
+                            <span ng-if="cart.length==0">No Orders</span>
 
-                            <button href class="btn btn-default pull-right">Save</button>
+                            <!--                            <button href class="btn btn-default pull-right">Save</button>-->
                             <div class="clearfix"></div>
 
                         </div>
@@ -184,19 +188,22 @@
     </div>
 </div>
 <script type="text/javascript">
-adroll_adv_id = "G6LALHLSQND65BWFJHGK64";
-adroll_pix_id = "66MZJPUDNNFL3LTOO5ORSG";
-(function () {
-var oldonload = window.onload;
-window.onload = function(){
-   __adroll_loaded=true;
-   var scr = document.createElement("script");
-   var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-   scr.setAttribute('async', 'true');
-   scr.type = "text/javascript";
-   scr.src = host + "/j/roundtrip.js";
-   ((document.getElementsByTagName('head') || [null])[0] ||
-    document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-   if(oldonload){oldonload()}};
-}());
+    adroll_adv_id = "G6LALHLSQND65BWFJHGK64";
+    adroll_pix_id = "66MZJPUDNNFL3LTOO5ORSG";
+    (function () {
+        var oldonload = window.onload;
+        window.onload = function () {
+            __adroll_loaded = true;
+            var scr = document.createElement("script");
+            var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
+            scr.setAttribute('async', 'true');
+            scr.type = "text/javascript";
+            scr.src = host + "/j/roundtrip.js";
+            ((document.getElementsByTagName('head') || [null])[0] ||
+                document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
+            if (oldonload) {
+                oldonload()
+            }
+        };
+    }());
 </script>
