--- a/views/profile.html
+++ b/views/profile.html
@@ -44,7 +44,7 @@
                             </div>
 
 
-                            <button href class="btn btn-default pull-right" ng-click="savePersonalInfo(personal);">Save</button>
+                            <button href class="btn btn-default pull-right" ng-click="savePersonalInfo(personal);init();">Save</button>
                             <div class="clearfix"></div>
 
                         </div>
