validations and sale page integration

--- a/views/profile-pop.html
+++ b/views/profile-pop.html
@@ -1,9 +1,9 @@
 
-<div class="pop-set">
+<div class="pop-set" ng-controller="profile">
 
 <div class="cont-set">
 <!--<h1 style=" font-weight: 600;">$4.00</h1>-->
-<h1>THANK YOU FOR SUBMISSION YOUR INFORMATION</h1>
+<h1>{{popupmsg}}</h1>
 
 </div>
 
