--- a/views/wholesale.html
+++ b/views/wholesale.html
@@ -9,5 +9,19 @@
                 <p>- I currently have stockists all across the world. If you are interested in in stocking my products please email me at <a href="mailto:lyla@lylaloves.co.uk?Subject=Wholesale%20Enquiery" target="_top">lyla@lylaloves.co.uk</a></p>
             </div>
         </div>
+               <div class="row  ">
+            <div class="banner">
+                <h1>wholesale header title</h1>
+                <div class="col-md-12 banner1">
+                    <img src="../img/wholesaleheadertitle.jpg" class="img-responsive">
+                </div>
+                 
+            </div>
+        </div>
+        <div class="row">
+             <div class="col-md-12 banner1">
+                    <img src="../img/wholesaleheader.jpg" class="img-responsive">
+                </div>
+        </div>
     </div>
 </div>
